css/admin_dashboard/styles.css
/*! Generated by Font Squirrel (https://www.fontsquirrel.com) on December 10, 2024 */

@font-face {
    font-family: 'robotobold';
    src: url('./fonts/webfontkit-20241210-203210/roboto-bold-webfont.woff2') format('woff2'),
         url('./fonts/webfontkit-20241210-203210/roboto-bold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'robotoitalic';
    src: url('./fonts/webfontkit-20241210-203210/roboto-italic-webfont.woff2') format('woff2'),
         url('./fonts/webfontkit-20241210-203210/roboto-italic-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'robotoregular';
    src: url('./fonts/webfontkit-20241210-203210/roboto-regular-webfont.woff2') format('woff2'),
         url('./fonts/webfontkit-20241210-203210/roboto-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

* {
    box-sizing: border-box;
}

body {
    font-family: "robotoregular";
    margin: 0;
}

li {
    list-style-type: none;
}

.container {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(5, 20vh);
}

/* .header {
    display: grid;
    grid-template-rows: 50px 50px;
    grid-area: 1 / 2 / 2 / 6;
    align-items: center;
    justify-items: end;
    padding-top: 25px;
} */

/* .row1 {
    grid-row: 1 / 2;
}

.row2 {
    grid-row: 2 / 3;
} */

.header {
    grid-area: 1 / 2 / 2 / 6;
}

.search {
    grid-column: span 3;
    height: 25px;
    width: 90%;
    margin-left: 15px;
    justify-self: start;
    border-radius: 50px;
    border-style: none;
    background-color: rgba(31 169 196 / 0.17);
}

.profile-name {
    justify-self: start;
    font-family: "robotobold";
}

.head-div > svg {
    height: 25px;
}

.profile-icon {
    border-radius: 100%;
    height: 50px;
    justify-self: center;
}

.sidebar {
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-auto-flow: column;
    grid-area: 1 / 1 / 3 / 2;
    align-content: start;
    gap: 15px;
    padding: 25px 25px 0 25px;
    background-color: #0ea5e9;
    color: white;
    font-family: "robotobold";
    height: 100vh;
    width: 20vw;
}

.sidebar > * {
    margin: 0
}

.sidebar > svg {
    justify-self: center;
    grid-column: 1 / 2;
    height: 25px;
    fill: white;
}

.sidebar > p {
    grid-column: 2 / 3;
    align-self: center;
}

#gap1 {
    grid-area: 2 / 1 / 4 / 3;
}

#gap2 {
    grid-area: 10 / 1 / 12 / 3;
}

#gap3 {
    /* grid-area: 2 / 3 / 3 / 5; */
}

.sidebar > .logo {
    height: 50px;
}

#dash {
    font-size: 25px;
}

.content {
    grid-area: 2 / 2 / 6 / 6;
    background-color: rgba(31 169 196 / 0.17);
}

.head-div {
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    justify-items: end;
}

.profile-icon.row2 {
    /* grid-row: 2 / 4; */
    height: 75px;
    justify-self: end;
    padding-right: 25px;
}

#name {
    font-size: 20px;
    font-weight: bold;
    /* justify-self: start; */
}

.greeting {
    justify-self: start;
}

